tons of css changes

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,25 +1,32 @@
+.wrapper {
+  width: 100%;
+  background-color: #efefef;
+  display: flex;
+  justify-content: center;
+  padding: 4rem 1rem;
+  min-height: 100vh;
+}
+
 .container {
-    max-width: 40rem;
-    padding: 0 1rem;
-    margin: 3rem auto 6rem;
-  }
-  
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .headerImage {
-    width: 12rem;
-    height: 12rem;
-  }
-  
-  .headerHomeImage {
-    width: 10rem;
-    height: 10rem;
-  }
-  
-  .backToHome {
-    margin: 3rem 0 0;
-  }
+  max-width: 40rem;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.headerImage {
+  width: 12rem;
+  height: 12rem;
+}
+
+.headerHomeImage {
+  width: 10rem;
+  height: 10rem;
+}
+
+.backToHome {
+  margin: 3rem 0 0;
+}
